@@ -16,13 +16,17 @@
 package io.fabric8.openshift.client.server.mock;
 
 import java.io.IOException;
+import java.net.HttpURLConnection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import io.fabric8.kubernetes.api.model.APIGroupListBuilder;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.KubernetesList;
 import io.fabric8.kubernetes.api.model.KubernetesListBuilder;
+import io.fabric8.kubernetes.api.model.Pod;
+import io.fabric8.kubernetes.api.model.PodBuilder;
 import io.fabric8.kubernetes.api.model.Service;
 import io.fabric8.kubernetes.api.model.ServicePort;
 import io.fabric8.kubernetes.api.model.ServiceSpec;
@@ -38,27 +42,39 @@ import io.fabric8.openshift.client.OpenShiftClient;
 import io.fabric8.openshift.client.OpenShiftConfigBuilder;
 import io.fabric8.openshift.client.ParameterValue;
 import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.migrationsupport.rules.EnableRuleMigrationSupport;
 
 import static java.util.Collections.singletonMap;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
+@EnableRuleMigrationSupport
 public class TemplateTest {
   @Rule
   public OpenShiftServer server = new OpenShiftServer();
 
   @Test
-  public void testList() {
-    server.expect().withPath("/oapi/v1/namespaces/test/templates").andReturn(200, new TemplateListBuilder().build()).once();
-    server.expect().withPath("/oapi/v1/namespaces/ns1/templates").andReturn(200, new TemplateListBuilder()
+  void testList() {
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates").andReturn(200, new TemplateListBuilder().build()).once();
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/ns1/templates").andReturn(200, new TemplateListBuilder()
       .addNewItem().and()
       .addNewItem().and().build()).once();
+    server.expect().withPath("/apis").andReturn(200, new APIGroupListBuilder()
+      .addNewGroup()
+      .withApiVersion("v1")
+      .withName("autoscaling.k8s.io")
+      .endGroup()
+      .addNewGroup()
+      .withApiVersion("v1")
+      .withName("security.openshift.io")
+      .endGroup()
+      .build()).always();
 
-    server.expect().withPath("/oapi/v1/templates").andReturn(200, new TemplateListBuilder()
+    server.expect().withPath("/apis/template.openshift.io/v1/templates").andReturn(200, new TemplateListBuilder()
       .addNewItem().and()
       .addNewItem().and()
       .addNewItem()
@@ -80,10 +96,10 @@ public class TemplateTest {
   }
 
   @Test
-  public void testListWithParams() throws IOException {
+  void testListWithParams() throws IOException {
     String json = IOHelpers.readFully(getClass().getResourceAsStream("/template-list-with-number-params.json"));
 
-    server.expect().withPath("/oapi/v1/namespaces/test/templates").andReturn(200, json).always();
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates").andReturn(200, json).always();
 
     OpenShiftClient client = server.getOpenshiftClient();
 
@@ -97,12 +113,12 @@ public class TemplateTest {
 
 
   @Test
-  public void testGet() {
-    server.expect().withPath("/oapi/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder()
+  void testGet() {
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder()
       .withNewMetadata().withName("tmpl1").endMetadata()
       .build()).once();
 
-    server.expect().withPath("/oapi/v1/namespaces/ns1/templates/tmpl2").andReturn(200, new TemplateBuilder()
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/ns1/templates/tmpl2").andReturn(200, new TemplateBuilder()
       .withNewMetadata().withName("tmpl2").endMetadata()
       .build()).once();
 
@@ -122,9 +138,9 @@ public class TemplateTest {
 
 
   @Test
-  public void testDelete() {
-    server.expect().withPath("/oapi/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder().build()).once();
-    server.expect().withPath("/oapi/v1/namespaces/ns1/templates/tmpl2").andReturn(200, new TemplateBuilder().build()).once();
+  void testDelete() {
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder().build()).once();
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/ns1/templates/tmpl2").andReturn(200, new TemplateBuilder().build()).once();
 
     OpenShiftClient client = server.getOpenshiftClient();
 
@@ -139,7 +155,7 @@ public class TemplateTest {
   }
 
   @Test
-  public void testCreateWithHandler() {
+  void testCreateWithHandler() {
     Template template = new TemplateBuilder()
       .editOrNewMetadata()
       .withName("tmpl3")
@@ -147,8 +163,8 @@ public class TemplateTest {
       .endMetadata()
       .build();
 
-    server.expect().withPath("/oapi/v1/namespaces/test/templates").andReturn(200, template).once();
-    server.expect().withPath("/oapi/v1/namespaces/test/templates/tmpl3").andReturn(404, new StatusBuilder().withCode(404).build()).once();
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates").andReturn(200, template).once();
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates/tmpl3").andReturn(404, new StatusBuilder().withCode(404).build()).once();
 
     OpenShiftClient client = server.getOpenshiftClient();
 
@@ -158,9 +174,9 @@ public class TemplateTest {
 
 
   @Test
-  public void testProcess() {
-    server.expect().withPath("/oapi/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder().build()).once();
-    server.expect().withPath("/oapi/v1/namespaces/test/processedtemplates").andReturn(201, new KubernetesListBuilder().build()).once();
+  void testProcess() {
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder().build()).once();
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/processedtemplates").andReturn(201, new KubernetesListBuilder().build()).once();
 
     OpenShiftClient client = server.getOpenshiftClient();
     KubernetesList list = client.templates().withName("tmpl1").process(new ParameterValue("name1", "value1"));
@@ -168,8 +184,8 @@ public class TemplateTest {
   }
 
   @Test
-  public void shouldLoadTemplateWithNumberParameters() throws Exception {
-    OpenShiftClient client = new DefaultOpenShiftClient(new OpenShiftConfigBuilder().withDisableApiGroupCheck(true).build());
+  void shouldLoadTemplateWithNumberParameters() {
+    OpenShiftClient client = new DefaultOpenShiftClient(new OpenShiftConfigBuilder().build());
     Map<String, String> map = new HashMap<>();
     map.put("PORT", "8080");
     KubernetesList list = client.templates().withParameters(map).load(getClass().getResourceAsStream("/template-with-number-params.yml")).processLocally(map);
@@ -192,13 +208,13 @@ public class TemplateTest {
     List<ServicePort> ports = serviceSpec.getPorts();
     assertEquals(1, ports.size());
     ServicePort port = ports.get(0);
-    assertEquals(new Integer(8080), port.getPort());
+    assertEquals(Integer.valueOf(8080), port.getPort());
   }
 
   @Test
-  public void testLoadParameterizedNumberTemplate() throws IOException {
+  void testLoadParameterizedNumberTemplate() throws IOException {
     String json = IOHelpers.readFully(getClass().getResourceAsStream("/template-with-number-params.json"));
-    server.expect().withPath("/oapi/v1/namespaces/test/templates/tmpl1").andReturn(200, json).once();
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates/tmpl1").andReturn(200, json).once();
 
     Map<String, String> map = new HashMap<>();
     map.put("PORT", "8080");
@@ -210,9 +226,9 @@ public class TemplateTest {
   }
 
   @Test
-  public void testProcessParameterizedNumberTemplate() throws IOException {
+  void testProcessParameterizedNumberTemplate() throws IOException {
     String json = IOHelpers.readFully(getClass().getResourceAsStream("/template-with-number-params.json"));
-    server.expect().withPath("/oapi/v1/namespaces/test/templates/tmpl1").andReturn(200, json).once();
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates/tmpl1").andReturn(200, json).once();
 
     Map<String, String> map = new HashMap<>();
     map.put("PORT", "8080");
@@ -223,8 +239,8 @@ public class TemplateTest {
   }
 
   @Test
-  public void testNullParameterMapValueShouldNotThrowNullPointerException() {
-    server.expect().withPath("/oapi/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder()
+  void testNullParameterMapValueShouldNotThrowNullPointerException() {
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder()
       .withNewMetadata().withName("tmpl1").endMetadata()
       .withParameters(new ParameterBuilder().withName("key").build())
       .build()).once();
@@ -235,8 +251,8 @@ public class TemplateTest {
   }
 
   @Test
-  public void testEmptyParameterMapValueShouldNotThrowNullPointerException() {
-    server.expect().withPath("/oapi/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder()
+  void testEmptyParameterMapValueShouldNotThrowNullPointerException() {
+    server.expect().withPath("/apis/template.openshift.io/v1/namespaces/test/templates/tmpl1").andReturn(200, new TemplateBuilder()
       .withNewMetadata().withName("tmpl1").endMetadata()
       .withParameters(new ParameterBuilder().withName("key").build())
       .build()).once();
@@ -244,6 +260,70 @@ public class TemplateTest {
     Map<String, String> emptyValueMap = singletonMap("key", "");
     KubernetesList list = client.templates().withName("tmpl1").processLocally(emptyValueMap);
     assertNotNull(list);
+  }
+
+  @Test
+  void testCreateOrReplaceOpenShift3() {
+    // Given
+    Template template = getTemplateBuilder().build();
+    server.expect().post().withPath("/oapi/v1/namespaces/ns1/templates")
+      .andReturn(HttpURLConnection.HTTP_OK, template)
+      .once();
+
+    OpenShiftClient client = server.getOpenshiftClient();
+
+    // When
+    template = client.templates().inNamespace("ns1").createOrReplace(template);
+
+    // Then
+    assertNotNull(template);
+  }
+
+  @Test
+  void testCreateOrReplaceOpenShif4() {
+    // Given
+    Template template = getTemplateBuilder().build();
+    server.expect().post().withPath("/apis/template.openshift.io/v1/namespaces/ns1/templates")
+      .andReturn(HttpURLConnection.HTTP_OK, template)
+      .once();
+    OpenShiftClient client = server.getOpenshiftClient();
+
+    // When
+    template = client.templates().inNamespace("ns1").createOrReplace(template);
+
+    // Then
+    assertNotNull(template);
+  }
+
+  private TemplateBuilder getTemplateBuilder() {
+    Pod pod = new PodBuilder()
+      .withNewMetadata().withName("redis-master").endMetadata()
+      .withNewSpec()
+      .addNewContainer()
+      .addNewEnv().withName("REDIS_PASSWORD").withValue("${REDIS_PASSWORD}").endEnv()
+      .withImage("dockerfile/redis")
+      .addNewPort()
+      .withContainerPort(6379)
+      .withProtocol("TCP")
+      .endPort()
+      .endContainer()
+      .endSpec()
+      .build();
+    return new TemplateBuilder()
+      .withNewMetadata()
+      .withName("redis-template")
+      .addToAnnotations("description", "Description")
+      .addToAnnotations("iconClass", "icon-redis")
+      .addToAnnotations("tags", "database,nosql")
+      .endMetadata()
+      .addToObjects(pod)
+      .addNewParameter()
+      .withDescription("Password used for Redis authentication")
+      .withFrom("[A-Z0-9]{8}")
+      .withGenerate("expression")
+      .withName("REDIS_PASSWORD")
+      .endParameter()
+      .addToLabels("redis", "master");
   }
 
 }
